EPBDS-13022 EPBDS-13023 Support interface enhancement to support Spreadsheet Result Beans as input parameters. Support conversation annotation in service interface to provide flexibility to configure functionality